2005-12-9 Axel Simon <A.Simon@kent.ac.uk>

	* demo/fastdraw/FastDraw.hs: Fixed two parameters.

	* glib/System/Glib/UTFString.hs.pp: Renamed from
	glib/System/Glib/UTFString.hs since it needs to be run through CPP
	to appease haddock.

2005-12-8 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/System/Glib/FFI.hs.pp: We should almost certainly not be using
	the standard free function anywhere in the glib or gtk bindings, so we
	do not re-export it from this module. It is not gueranteed by the
	Haskell FFI spec that free calls the C free() function. It is also not
	guaranteed that g_free() simply calls the stanard C free() function.

	* glib/System/Glib/UTFString.hs: call g_free() rather than Haskell
	free for freeing glib strings (which of course were allocated with
	g_new()).

	* gtk/Graphics/UI/Gtk/Gdk/Pixbuf.chs.pp: use withUTFStringArray and
	withUTFStringArray0 rather than ad-hoc implementations.

	* gtk/Graphics/UI/Gtk/General/StockItems.hsc: use readUTFString rather
	than peekUTFString + g_free().

	* glib/System/Glib/GList.chs: add withGSList function.

	* sourceview/Graphics/UI/Gtk/SourceView/SourceTag.chs: use withGSList
	and withUTFStrings rather than the more complex exising solution.

	* gtk/Graphics/UI/Gtk/TreeList/TreePath.chs.pp: export newTreePath for
	use in other modules but not for top-level export.

	* gtk/Graphics/UI/Gtk/TreeList/CustomStore.chs,
	gtk/Graphics/UI/Gtk/TreeList/Gtk2HsStore.c,
	gtk/Graphics/UI/Gtk/TreeList/Gtk2HsStore.h: add low-level parts of an
	implementation of custom GtkTreeModels. This includes a GObject
	written in C that implements the GtkTreeModel interface and delegates
	the implementation via a Haskell interface. This does not yet include
	any actual implementations of the Haskell CustomStore interface.

	* Makefile.am: build the new files.

2005-12-7 Axel Simon <A.Simon@kent.ac.uk>

	* glib/System/Glib/Signals.chs.pp, gtk/Graphics/UI/Gtk.hs: Add new
	signal functions and export some of them.
